test/good/macro_as_constant.ulm
.text

.macro MY_CONSTANT 54 .endmacro

main:
    loadi rout MY_CONSTANT
    halt