test/bad/no_macro_name.ulm
.macro
    add r0 r0 r0
.endmacro

.text
main:
    nop
    